first load to hithub

--- a/16-Funciones/Funciones_blank.ipynb
+++ b/16-Funciones/Funciones_blank.ipynb
@@ -29,9 +29,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# y = f(x)"
+    "# y = f(x)\n",
+    "num = 1_000_000\n",
+    "num"
    ]
   },
   {
